# UnityBLE

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json
.claude/: settings.local.json
.claude/commands/: create-issue.md  start-issue.md
BuildTools~/: Makefile
Documentation~/: README.md
Editor/: UnityBLE.Editor.asmdef  iOSBuildPostProcessor.cs
Runtime/: AssemblyInfo.cs  BleManager.cs  UnityBLE.asmdef
Runtime/Android/: AndroidBleCharacteristic.cs  AndroidBleCommunicator.cs  AndroidBleDevice.cs  AndroidBlePermissionService.cs  AndroidBleService.cs  AndroidNativeMessageParser.cs  AndroidPermissionService.cs  UnityBLE.Android.asmdef
Runtime/Factory/: BleCommandFactory.cs  BleFactory.cs  BleNativeMessageParserFactory.cs  BlePermisionServiceFactory.cs
Runtime/Windows/: UnityBLE.Windows.asmdef
Runtime/iOS/: UnityBLE.iOS.asmdef
Runtime/interfaces/: AssemblyInfo.cs  BleCharacteristicInfo.cs  BleDeviceEvents.cs  BleNativePluginEventDispatcher.cs  BleScanEventDelegates.cs  BleScanEvents.cs  BleScanner.cs  BleStatus.cs  CharacteristicProperties.cs  CharacteristicsUtiil.cs  IBLECommunicator.cs  IBleCharacteristic.cs  IBleDevice.cs  IBleNativeMessageParser.cs  IBlePeripheral.cs  IBlePermissionService.cs  IBleScanner.cs  IBleService.cs  (+5 more)
Samples~/: README.md
UnityBleNativePlugin/: MacOSBlePlugin.mm
docs/: ble-android-implementation.md  ble-specification-summary.md
externalProjects~/Windows/UnityBleWindows/: .gitignore  CMakeLists.txt  README.md  build.bat
externalProjects~/Windows/UnityBleWindows/src/: UnityBleWindows.cpp
(+222 files in other folders)
